# Boids

./: Cargo.toml  LICENSE  README.md
assets/: Attributions.txt
assets/prefab/: sphere.prefab
assets/texture/: bird_3_robin.ron
config/: bindings.ron  display.ron  species.ron
src/: main.rs
src/boid/: mod.rs
src/components/: boid.rs  mod.rs  player_control.rs  velocity.rs  wing.rs
src/configurations/: boid_species.rs  mod.rs
src/systems/: boid.rs  game_flow_state.rs  mod.rs  player_character.rs
src/utilities/: mod.rs
src/window/: mod.rs
