[package]
name = "boids"
version = "0.1.0"
authors = ["Luke Draper <lukepdraper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { version = "0.15.3", features = ["metal"] }
rand = "0.8.3"
serde = "1.0.123"
